--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
   <meta property="og:title" content="Box Đề - Đề hay cả Box">
   <meta property="og:description" content="Ôn Luyện Đánh Giá Tư Duy Miễn Phí TSA chất lượng cao, cập nhật liên tục cùng Box Star.">
   <meta property="og:url" content="https://tsa.boxde.online/">
-  <meta property="og:image" content="https://tsa.boxde.online/images/preview.png">
+  <meta property="og:image" content="https://boxde.online/images/preview.png">
   <meta property="og:site_name" content="Box Star">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Box Đề - Đề hay cả Box">
   <meta name="twitter:description" content="Ôn Luyện Đánh Giá Tư Duy Miễn Phí TSA chất lượng cao, cập nhật liên tục cùng Box Star.">
-  <meta name="twitter:image" content="https://tsa.boxde.online/images/preview.png">
+  <meta name="twitter:image" content="https://boxde.online/images/preview.png">
 
   <!-- Icon và theme -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/icon.png">
@@ -454,6 +454,7 @@
   </script>
 </body>
 </html>
+
 
 
 
