--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <meta name="keywords" content="TSA, Ôn luyện, Đánh giá tư duy, Box Star, ôn thi online, Box Đề">
   <meta name="robots" content="index, follow">
   <meta name="author" content="Box Star">
-  <link rel="canonical" href="https://tsa.boxde.online/">
+  <link rel="canonical" href="https://boxde.online/">
 
   <!-- Open Graph cho mạng xã hội -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Box Đề - Đề hay cả Box">
   <meta property="og:description" content="Ôn Luyện Đánh Giá Tư Duy Miễn Phí TSA chất lượng cao, cập nhật liên tục cùng Box Star.">
-  <meta property="og:url" content="https://tsa.boxde.online/">
+  <meta property="og:url" content="https://boxde.online/">
   <meta property="og:image" content="https://boxde.online/images/preview.png">
   <meta property="og:site_name" content="Box Star">
 
@@ -454,6 +454,7 @@
   </script>
 </body>
 </html>
+
 
 
 
